fix: mobile body overflow to prevent input being hidden

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -430,7 +430,7 @@ body {
     padding-top: 0 !important;
     min-height: 100svh;
     min-height: 100dvh;
-    overflow: hidden;
+    overflow: auto;
   }
 
   /* IMPORTANTÍSIMO: si tu .app tenía height: 650px o max-width: 1100px, aquí lo anulamos */
